2008-05-30  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (update-elclist): Hide the warning when it does not apply,
	make it milder when it does.
	(autogen-clean): New target.
	(maintainer-clean): Use autogen-clean.

	* calendar/diary-lib.el (diary-display-function): New name for
	diary-display-hook.  Keep old name as obsolete alias.  Doc fix.
	Change custom type and version.
	(diary-list-entries-hook, diary-list-entries, diary-simple-display)
	(diary-fancy-display): Doc fixes.
	(diary-list-entries, diary-include-other-diary-files)
	(diary-mail-entries):
	Use diary-display-function rather than diary-display-hook.

	* calendar/appt.el (appt-check): Use diary-display-function rather than
	diary-display-hook.
	* calendar/cal-x.el (calendar-dedicate-diary): Update for
	diary-display-function replacing diary-display-hook.
	* org/org-agenda.el (org-get-entries-from-diary): Also set
	diary-display-function.

	* calendar/cal-html.el (cal-html-list-diary-entries):
	* calendar/cal-menu.el (calendar-mouse-view-diary-entries):
	* calendar/cal-tex.el (cal-tex-list-diary-entries): Use LIST-ONLY
	argument of diary-list-entries rather than setting diary-display-hook.

2008-05-30  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (describe-font): Don't check fontset
	here, and just call font-info.  Get the default font by from the
	default face.

2008-05-29  Kenichi Handa  <handa@m17n.org>

	* international/mule-conf.el (utf-8-sig, utf-8-auto): New coding
	systems.

	* international/mule.el (define-coding-system): Accept :bom for
	utf-8.

2008-05-29  Espen Wiborg  <espen.wiborg@telio.no>  (tiny change)

	* international/utf-7.el (utf-7-encode): Use the right escape char
	depending on imap/nonimap encoding.

2008-05-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-pcm-all-completions): Add the base-size.

2008-05-29  Juanma Barranquero  <lekktu@gmail.com>

	* icomplete.el (icomplete-prospects-height): Add :group.
